Fix section menu overlay and toggle for support book nodes, fix site hiding behind gin toolbar when logged in

--- a/web/themes/custom/citizen_dart/components/02-chunks/navigation/section-menu/_section-menu.scss
+++ b/web/themes/custom/citizen_dart/components/02-chunks/navigation/section-menu/_section-menu.scss
@@ -56,6 +56,9 @@
       right: 0;
       top: 0;
       z-index: 1;
+      .node-type-support-book &{
+        display: none;
+      }
     }
   }
   .hide-nav &{
@@ -83,6 +86,9 @@
     }
     &:hover {
       color: $hoverLink;
+    }
+    .node-type-support-book &{
+      display: none;
     }
     .toggle-label {
       font-family: $header;
